                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 28-07-2006 fixed: Weave (Old Sync...) deinterlacer would use invalid field offsets during scaling, causing more small details to dissapear than needed
 - 28-07-2006 changed: HQ PixelShader now uses one 32bit video frame less of memory (1.5megs dvdres) during standard output (blend and weave deinterlaces still need it thou)
 - 28-07-2006 fixed: vobsubs and text subtitles using mplayer font's would lock on screen and not disapear until next subtitle since render cleanup.
 - 27-07-2006 added: xbmc.getCondVisibility() method to python. Pass it any condition(s) string as you would
                     for skinning. It returns (true (1) or False (0)).
 - 26-07-2006 added: bob and blend deinterlacing using renderer (gpu)
 - 26-07-2006 fixed: Refresh of IMDb info freeze.
 - 26-07-2006 fixed: Video streaming fixed with UPnP (ShareOrDrive flag was the problem. somehow the code logic is different for Music vs Video)
 - 26-07-2006 changed: Make .aif play with the AIFFcodec in paplayer.
 - 25-07-2006 changed: Moved the paplayer chain to fully use floating point (speedup and possible quality boosts)
 - 25-07-2006 fixed: [ 1527036 ] My Programs shares show network-shares icons
 - 25-07-2006 fixed: [ 1526978 ] Movie info is no longer pulling the Cast data from IMDB
 - 23-07-2006 changed: cleanup and simplification of renderer and field rendering. 
                       combined async rendering of dvdplayer and mplayer
                       changed texture memory to not be write combined, allows fast reads
 - 23-07-2006 changed: stacking of files was case sensitive on filenames before, now it's case insensitive