@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 28-07-2006 fixed: [ 1530058 ] Playing a movie from info screen doesn't count as watched.
  - 28-07-2006 fixed: Weave (Old Sync...) deinterlacer would use invalid field offsets during scaling, causing more small details to dissapear than needed
  - 28-07-2006 changed: HQ PixelShader now uses one 32bit video frame less of memory (1.5megs dvdres) during standard output (blend and weave deinterlaces still need it thou)
  - 28-07-2006 fixed: vobsubs and text subtitles using mplayer font's would lock on screen and not disapear until next subtitle since render cleanup.
